K8S-manifest/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: example-oracle-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oracle 
  template:
    metadata:
      labels:
        app: oracle 
    spec: 
      containers:
        - name: oracle-cont 
          image: muralisocial123/oracle-web-app:latest
          ports:
            - containerPort: 80
