K8S-manifest/pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: example-web-pod 
  namespace: test-ns
spec: 
  containers:
    - name: example-pod 
      image: muralisocial123/oracle-web-app:latest
      ports:
        - containerPort: 80
