K8S-manifest/nodeport-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: transaction-oracle-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trans
  template:
    metadata:
      labels:
        app: trans 
    spec: 
      containers:
        - name: trans-app
          image: muralisocial123/transcation-image:latest
          ports:
            - containerPort: 3000 
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi    
---
apiVersion: v1 
kind: Service
metadata:
  name: trans-svc
spec:
  selector:
    app: trans
  ports:
  - port: 3001
    targetPort: 3000
    protocol: TCP 
  type: NodePort
