K8S-manifest/trans-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: insurance-app-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example 
  template:
    metadata:
      labels:
        app: example 
    spec: 
      containers:
        - name: trans-app
          image: muralisocial123/insurance-app-excelr:latest
          ports:
            - containerPort: 80 
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1 
kind: Service 
metadata: 
  name: insurance-deployment-svc 
spec: 
  selector:
    app: example
  ports:
    - name: insurance-web 
      protocol: TCP 
      port: 83
      targetPort: 80 
  type: ClusterIP
