K8S-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/oracle(/|$)(.*)"
        backend:
          service:
            name: example-oracle-svc
            port: 
              number: 82
